--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 log = "0.4.14"
 simplelog = "0.10.0"
+serde = { version = "1.0", features = ["derive"] }
 
 [[bin]]
 name = "rdm_test"
